--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 #gameboard {
     width: 300px;
     height: 300px;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
     display: flex;
     flex-wrap: wrap;
     border: solid 1px black;
@@ -30,12 +30,37 @@ body {
     align-items: center;
 }
 
-.circle{
+.circle {
     height: 90px;
     width: 90px;
     border-radius: 50%;
     border: 15px solid red;
     box-sizing: border-box;
+}
 
-    
+.cross {
+    height: 90px;
+    width: 90px;
+    position: relative;
+    transform: rotate(45deg);
+}
+
+.cross:before , .cross:after{
+    content: "";
+    position: absolute;
+    background-color: aliceblue;
+}
+
+.cross:before {
+    left: 50%;
+    width: 30%;
+    margin-left: -15%;
+    height: 100%;
+}
+
+.cross:after {
+    top: 50%;
+    height: 30%;
+    margin-top: -15%;
+    width: 100%;
 }
