--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     align-items: center;
     flex-direction: column;
     height: 100vh;
+    background-color: #35145f;
 }
 
 #gameboard {
@@ -16,14 +17,20 @@ body {
     /* background-color: aquamarine; */
     display: flex;
     flex-wrap: wrap;
-    border: solid 1px black;
+    border: solid 4px #4f2488;
+    border-radius: 20px;
+    background-color: #4f2488;
+    box-shadow: 5px 4px 172px 69px rgba(0,0,0,0.89);
+-webkit-box-shadow: 5px 4px 172px 69px rgba(0,0,0,0.89);
+-moz-box-shadow: 5px 4px 172px 69px rgba(0,0,0,0.89);
 }
 
 .square {
     width: 100px;
     height: 100px;
-    background-color: rgb(93, 61, 126);
-    border: solid 2px black;
+    background-color: #20004a;
+    border: solid 4px #4f2488;
+    border-radius: 20px;
     box-sizing: border-box;
     display: flex;
     justify-content: center;
@@ -34,7 +41,7 @@ body {
     height: 90px;
     width: 90px;
     border-radius: 50%;
-    border: 15px solid red;
+    border: 15px inset #dac100;
     box-sizing: border-box;
 }
 
@@ -48,7 +55,7 @@ body {
 .cross:before , .cross:after{
     content: "";
     position: absolute;
-    background-color: aliceblue;
+    background-color: #9c0072;
 }
 
 .cross:before {
@@ -63,4 +70,7 @@ body {
     height: 30%;
     margin-top: -15%;
     width: 100%;
+}
+#info{
+    color: #dac100;
 }
