--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* =====Developer : Tara Tavangar====== */
 
+/* General Style */
 body {
     margin: 0;
     padding: 0;
@@ -11,6 +12,7 @@ body {
     background-color: #35145f;
 }
 
+/* Gameboard Style */
 #gameboard {
     width: 300px;
     height: 300px;
@@ -25,6 +27,7 @@ body {
 -moz-box-shadow: 5px 4px 172px 69px rgba(0,0,0,0.89);
 }
 
+/* Each Squares Style */
 .square {
     width: 100px;
     height: 100px;
@@ -37,6 +40,7 @@ body {
     align-items: center;
 }
 
+/* Circle's Style */
 .circle {
     height: 90px;
     width: 90px;
@@ -45,6 +49,7 @@ body {
     box-sizing: border-box;
 }
 
+/* Cross' Style */
 .cross {
     height: 90px;
     width: 90px;
